Optional features added

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,7 +92,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@id/answer3"
         android:visibility="invisible"
-        android:contentDescription="Eye with slash"
+        android:contentDescription="Eye with a slash"
         tools:ignore="HardcodedText" />
 
 </RelativeLayout>
