--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,4 +95,12 @@
         android:contentDescription="Eye with a slash"
         tools:ignore="HardcodedText" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/add"
+        android:src="@drawable/ic_add_circle_outline_black_24dp" />
+
 </RelativeLayout>
