--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,4 +103,12 @@
         android:id="@+id/add"
         android:src="@drawable/ic_add_circle_outline_black_24dp" />
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/edit"
+        android:src="@drawable/ic_edit_black_24dp" />
+
 </RelativeLayout>
