--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,7 +116,24 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:id="@+id/nextCard"
+        android:id="@+id/next_button"
         android:src="@drawable/ic_navigate_next_black_24dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerInParent="true"
+        android:id="@+id/prev_button"
+        android:src="@drawable/ic_navigate_before_black_24dp" />
+
+    <ImageView
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete_black_24dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/flashcard_question"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
